--- a/package.json
+++ b/package.json
@@ -14,9 +14,12 @@
   "dependencies": {
     "@heroicons/react": "2.0.18",
     "@material-tailwind/react": "2.1.2",
+    "@react-three/drei": "^9.109.2",
+    "@react-three/fiber": "^8.16.8",
     "next": "^13.5.6",
     "react": "18",
-    "react-dom": "18"
+    "react-dom": "18",
+    "three": "^0.167.1"
   },
   "devDependencies": {
     "@types/node": "20",
